--- a/starFrontend/src/index.html
+++ b/starFrontend/src/index.html
@@ -7,6 +7,7 @@
   <link href="../dist/output.css" rel="stylesheet">
   <!--FlatPickr-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <title>Home Page</title>
 </head>
 <body>
     <nav class="relative container flex flex-col items-center mx-auto p-6 md:flex-row">
@@ -30,9 +31,9 @@
                 </p>
                 <div class="flex justify-center md:justify-start">
                     <a
-                      href=""
+                      href="./Info.html"
                       class="p-3 px-6 pt-2 text-white bg-sky-300 rounded-full baseline hover:bg-brightRedLight"
-                      >Book Appointment</a
+                      >See Booked Appointment</a
                     >
                 </div>
             </div>
@@ -211,7 +212,7 @@
                             placeholder="Select DateTime"
                             name="customer_date"
                             >
-                           <button type="submit" class="submitButton bg-teal-500  hover:bg-teal-700 font-bold p-5 rounded-md">Book Appointment</button>
+                           <button type="submit" class="submitButton bg-teal-500  hover:bg-teal-700 font-bold p-2 rounded-md">Book Appointment</button>
                     </form>
                 
                     
