--- a/starFrontend/src/index.html
+++ b/starFrontend/src/index.html
@@ -80,11 +80,11 @@
                 <!---->
                 <ul class="grid grid-cols-3 gap-4 -mt-24 my-12 -mb-32 md:p-16 md:gap-12  md:grid-cols-3 md:-ml-32 ">
                     <li class="bg-white rounded-lg shadow-xl md:w-44"><div class="h-20"><img src="img/lab-test.png" class="w-32 md:w-32 md:ml-8" alt=""></div><h2 class="text-center mt-8">Laboratory Testing</h2></li>
-                    <li class="bg-white rounded-lg shadow-xl md:w-44"><div class="h-20"><img src="img/vaccina.png" class="w-32  md:w-32 md:ml-8" alt=""></div><h2 class="text-center  mt-8">vaccination</h2></li>
+                    <li class="bg-white rounded-lg shadow-xl md:w-44"><div class="h-20"><img src="./img/vaccination.jpg" class="w-32  md:w-32 md:ml-8" alt=""></div><h2 class="text-center  mt-8">vaccination</h2></li>
                     <li class="bg-white rounded-lg shadow-xl md:w-44"><div class="h-20"><img src="img/treatment.png" class="w-32 md:w-24 md:ml-8" alt=""></div><h2 class="text-center mt-8">Treatment of common illness</h2></li>
                     <li class="bg-white rounded-lg shadow-xl md:w-44"><div class="h-20"><img src="img/dentist.png" class="w-32 md:w-32 md:ml-8" alt=""></div><h2 class="text-center mt-8">Densitory</h2></li>
                     <li class="bg-white rounded-lg shadow-xl md:w-44"><div class="h-20"><img src="img/mental health.png" class="w-32 md:w-32 md:ml-8" alt=""></div><h2 class="text-center mt-5">Mental Health Services</h2></li>
-                    <li class="bg-white rounded-lg shadow-xl md:w-44"><div class="h-20"><img src="img/counselling.png" class="w-32 md:w-32 md:ml-8" alt=""></div><h2 class="text-center mt-8">Counselling</h2></li>                    
+                    <li class="bg-white rounded-lg shadow-xl md:w-44"><div class="h-20"><img src="./img/counselling.jpg" class="w-32 md:w-32 md:ml-8" alt=""></div><h2 class="text-center mt-8">Counselling</h2></li>                    
                 </ul>
             </div>
             
@@ -138,7 +138,7 @@
               <div
                 class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray mb-10 md:w-1/3"
               >
-                <img src="img/avatar.png" class="w-16 -mt-14" alt="" />
+                <img src="./img/avatar4.jpg" class="w-16 -mt-14" alt="" />
                 <p class="text-sm text-darkGrayishBlue">
                   “Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas, numquam? Voluptatum esse in quibusdam, est a dolorum quasi.”
                 </p>
@@ -160,7 +160,7 @@
               <div
                 class="flex flex-col items-center p-6 space-y-6 rounded-lg mb-10 bg-veryLightGray md:w-1/3  md:flex"
               >
-                <img src="img/avatar2.png" class="w-16 -mt-14" alt="" />
+                <img src="./img/profile.jpg" class="w-16 -mt-14" alt="" />
                 <p class="text-sm text-darkGrayishBlue">
                   “Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, libero repudiandae nisi dicta error officia consequuntur, natus digniss.”
                 </p>
