updated some data

--- a/starFrontend/src/MainLogin.html
+++ b/starFrontend/src/MainLogin.html
@@ -90,7 +90,7 @@
                 <div>
                     <span class="font-medium">Ensure that these requirements are met:</span>
                     <ul class="mt-1.5 ml-4 text-red-700 list-disc list-inside">
-                        <li>All fields are not empty</li>
+                        <li>All fields must not empty</li>
                         <li>Password is typed correctly</li>
                     </ul>
                 </div>
