still worked on authentication

--- a/starFrontend/src/MainLogin.html
+++ b/starFrontend/src/MainLogin.html
@@ -64,7 +64,7 @@
                             x-show="!isLoginPage" class="ml-5 text-blue-700 font-bold cursor-pointer">Sign Up</span></p>
                 </div>
                 <!--success alert-->
-                <div class="hidden p-4 mb-4 mt-4 text-sm text-green-700 bg-green-100 rounded-lg dark:bg-green-200 dark:text-green-800"
+                <div class="loginsuccess hidden p-4 mb-4 mt-4 text-sm text-green-700 bg-green-100 rounded-lg dark:bg-green-200 dark:text-green-800"
                     role="alert">
                     <svg aria-hidden="true" class="flex-shrink-0 inline w-5 h-5 mr-3" fill="currentColor" viewBox="0 0 20 20"
                         xmlns="http://www.w3.org/2000/svg">
@@ -74,11 +74,11 @@
                     </svg>
                     <span class="sr-only">Info</span>
                     <div>
-                        <span class="font-medium">Success alert!</span> Change a few things up and try submitting again.
+                        <span class="font-medium mr-2">Success alert!</span>You have been authenticated
                     </div>
                 </div>
                 <!--warning alert-->
-            <div class="loginwarn    hidden  p-4 mt-5 mb-4 text-sm text-red-700 bg-red-100 rounded-lg dark:bg-red-200 dark:text-red-800"
+            <div class="loginwarn  hidden  p-4 mt-5 mb-4 text-sm text-red-700 bg-red-100 rounded-lg dark:bg-red-200 dark:text-red-800"
                 role="alert">
                 <svg aria-hidden="true" class="flex-shrink-0 inline w-5 h-5 mr-3" fill="currentColor" viewBox="0 0 20 20"
                     xmlns="http://www.w3.org/2000/svg">
@@ -155,7 +155,7 @@
                                 x-show="isLoginPage" class="ml-5 text-blue-700 font-bold cursor-pointer">Login</span></p>
                     </div>
                     <!--success alert-->
-                    <div class="hidden p-4 mb-4 mt-4 text-sm text-green-700 bg-green-100 rounded-lg dark:bg-green-200 dark:text-green-800"
+                    <div class="success hidden p-4 mb-4 mt-4 text-sm text-green-700 bg-green-100 rounded-lg dark:bg-green-200 dark:text-green-800"
                         role="alert">
                         <svg aria-hidden="true" class="flex-shrink-0 inline w-5 h-5 mr-3" fill="currentColor" viewBox="0 0 20 20"
                             xmlns="http://www.w3.org/2000/svg">
@@ -165,7 +165,7 @@
                         </svg>
                         <span class="sr-only">Info</span>
                         <div>
-                            <span class="font-medium">Success alert!</span> Change a few things up and try submitting again.
+                            <span class="font-medium message">Success alert!</span> You account has been created successfully
                         </div>
                     </div>
                     <!--warning alert-->
