added map features

--- a/starFrontend/src/MainLogin.html
+++ b/starFrontend/src/MainLogin.html
@@ -92,6 +92,7 @@
                     <ul class="mt-1.5 ml-4 text-red-700 list-disc list-inside">
                         <li>All fields must not empty</li>
                         <li>Password is typed correctly</li>
+                        <li>You have a stable network connection</li>
                     </ul>
                 </div>
             </div>
@@ -180,9 +181,9 @@
                         <div>
                             <span class="font-medium">Ensure that these requirements are met:</span>
                             <ul class="mt-1.5 ml-4 text-red-700 list-disc list-inside">
-                                <li>At least 10 characters (and up to 100 characters)</li>
-                                <li>At least one lowercase character</li>
-                                <li>Inclusion of at least one special character, e.g., ! @ # ?</li>
+                                <li>All fields must not empty</li>
+                                <li>your password should have at least 8 characters</li>
+                                <li>You have a stable network connection</li>
                             </ul>
                         </div>
                     </div>
