made changes to the map and other stuffs

--- a/starFrontend/ignore/login.html
+++ b/starFrontend/ignore/login.html
@@ -121,3 +121,28 @@
     </div>
 
 </div>
+
+
+
+<!--table data-->
+<div class="table-header-group">
+    <div class="table-row  text-blue-600">
+        <div class="table-cell text-left border p-2 cursor-pointer">Date</div>
+        <div class="table-cell text-left border p-2 cursor-pointer ">Time</div>
+        <div class="table-cell text-left border p-2 cursor-pointer">Service</div>
+        <div class="table-cell text-left border p-2 cursor-pointer">Status</div>
+        <div class="table-cell text-left border p-2 cursor-pointer">Doctor</div>
+    </div>
+</div>
+<div class="table-row-group appointment">
+    <div class="table-row">
+        <!--the date,time,service,status,doctor are class names
+                                the rest are tailwind styles
+                                -->
+        <div class="table-cell border p-2 cursor-pointer date"></div>
+        <div class="table-cell border p-2 cursor-pointer time"></div>
+        <div class="table-cell border p-2 cursor-pointer service"></div>
+        <div class="table-cell border p-2 cursor-pointer status"></div>
+        <div class="table-cell border p-2 cursor-pointer doctor"></div>
+    </div>
+</div>
