--- a/starFrontend/src/index.html
+++ b/starFrontend/src/index.html
@@ -24,6 +24,34 @@
                 <div class="bg-blue-500 text-white md:px-4 md:py-1 py-1 px-3  rounded font-bold cursor hidden logOutButton">LogOut</div>
             </div>
         </div>
+        <div class="hidden justify-center relative">
+            <div id="toast-success"
+                class="flex items-center absolute p-4 mb-4 w-full max-w-xs text-gray-500  rounded-lg shadow-md bg-blue-400"
+                role="alert">
+                <div class="inline-flex flex-shrink-0 justify-center items-center w-8 h-8 text-white rounded-lg">
+                    <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                            d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                            clip-rule="evenodd"></path>
+                    </svg>
+                    <span class="sr-only">Check icon</span>
+                </div>
+                <div class="ml-3 text-sm font-normal text-white">Appointment has been booked successfully.</div>
+                <button type="button"
+                    class="ml-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg  p-1.5 hover:bg-gray-100 inline-flex h-8 w-8"
+                    aria-label="Close">
+                    <span class="sr-only">Close</span>
+                    <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                            clip-rule="evenodd"></path>
+                    </svg>
+                </button>
+            </div>
+        </div>
+       
         <!--hero-->
         <div class="flex w-full  mt-4" style="background-image: url('img/bg.webp');">
             <!--Left Item-->
@@ -67,14 +95,14 @@
                 </div>
             </div>
         </div>
-        <div class="bg-cover bg-no-repeat max-h-full" style="background-image: url('./img/blue.jpg');">
+        <div class="bg-cover bg-no-repeat max-h-full mb-4" style="background-image: url('./img/blue.jpg');">
             <h2 class="text-4xl font-bold text-center  mt-4 md:mt-4 mb-10 md:mb-10">
                 WHAT WE OFFER.
             </h2>
             <div class="flex items-center">
                 <div class="">
                     <div>
-                        <ul class="grid grid-cols-3 gap-4 p-4 my-12">
+                        <ul class="grid grid-cols-2 md:grid-cols-3 gap-4 p-4 ">
                                     <li class="bg-white rounded-lg shadow-xl md:w-44">
                                         <div class=""><img src="./img/labTesting.jpg" class="w-32 md:w-32 md:ml-8" alt=""></div>
                                         <h2 class="text-center mt-8">Laboratory Testing</h2>
@@ -124,7 +152,7 @@
                         <div class="flex-1 max-w-4xl mx-auto ">
                             <!--Grid-->
                             <ul class="grid grid-cols-2 gap-4 -mt-56 -mb-32 md:p-16 md:gap-12  md:grid-cols-2 md:ml-96 ">
-                                <li class="bg-white rounded-lg shadow-xl md:w-44">
+                                <li class="bg-white rounded-lg shadow-xl  md:w-44">
                                     <div class="h-20"><img src="img/rocket.png" class="w-32 ml-10 md:w-32 md:ml-8" alt=""></div>
                                     <h2 class="text-center mt-8">Advanced Medical Technologies</h2>
                                 </li>
@@ -259,10 +287,19 @@
             </div>
         </div>
            <!--Map-->
-           <div class="flex mt-2 justify-center">
-             <div class="w-full h-96 border-yellow-300" id="map">
-
-             </div>
+           <div class="flex mt-2 items-center justify-center md:justify-around">
+            <div>
+                <h4>StarClinic™ Limited</h4>
+                <p>Oyarifa</p>
+                <p class="text-gray-500 cursor-pointer">Tel: <span class="text-gray-400">+233 (0) 555555555</span></p>
+                <p class="text-gray-500 cursor-pointer">Email:<span class="text-blue-500 ml-2 ">starclinic@gmail.com</span></p>
+            </div>
+            <div class="mapouter ">
+                <div class="gmap_canvas h-96 w-96"><iframe class=" h-96 w-1/2 md:w-96"  id="gmap_canvas"
+                        src="https://maps.google.com/maps?q=kuottam%20estate&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
+                        scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br>
+                </div>
+            </div>
            </div>
         <footer class="p-4 mt-4 bg-white sm:p-6 dark:bg-gray-900">
             <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8">
@@ -296,17 +333,19 @@
     <script src="./submitAppointment.js"></script>
     <!--Start of Tawk.to Script-->
     <!--Start of Tawk.to Script-->
+    <!--Start of Tawk.to Script-->
     <script type="text/javascript">
         var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
         (function () {
             var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
             s1.async = true;
-            s1.src = 'https://embed.tawk.to/63147d5137898912e9671892/1gc40j29n';
+            s1.src = 'https://embed.tawk.to/63408dc354f06e12d898ff24/1geq2ji70';
             s1.charset = 'UTF-8';
             s1.setAttribute('crossorigin', '*');
             s0.parentNode.insertBefore(s1, s0);
         })();
     </script>
+    <!--End of Tawk.to Script-->
     <!--End of Tawk.to Script-->
     <!--mapbox-->
     <script>
