placed all the files in a public folder

--- a/starFrontend/src/public/Info.html
+++ b/starFrontend/src/public/Info.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../dist/output.css" rel="stylesheet">
+    <link href="./dist/output.css" rel="stylesheet">
     <title>Appointments Page</title>
     <link rel="icon" href="./img/starClinic.jpg" alt="" type="image/x-icon" />
 </head>
@@ -90,7 +90,7 @@
                                     <td class="py-4 px-6 status">
                                        
                                     </td>
-                                    <td class="py-4 px-6 flex  items-center hidden showButton">
+                                    <td class="py-4 px-6   items-center hidden showButton">
                                         <a href="#" class="font-medium text-blue-600  hover:underline">Edit</a>
                                         <button class="font-medium text-red-600 ml-2 removeAppointment">Remove</button>
                                     </td>
