--- a/starFrontend/src/public/index.html
+++ b/starFrontend/src/public/index.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--TailwindCSS-->
-    <link href="../dist/output.css" rel="stylesheet">
+    <link href="./dist/output.css" rel="stylesheet">
     <!--FlatPickr-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-    <!--mapbox-->
-    <link href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css" rel="stylesheet">
-    <script src="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js"></script>
     <title>STAR CLINIC</title>
     <link rel="icon" href="./img/starClinic.jpg" alt="" type="image/x-icon" />
 </head>
 <body onload="load()">
-    <div class="h-screen p-2 flex flex-1 flex-col">
+    <div class="h-screen  flex  flex-col">
         <!--header section-->
         <div class=" flex justify-between p-2 items-center">
             <h2 class="md:text-4xl  font-bold text-center text-sky-300 cursor-pointer">STAR CLINIC</h2>
@@ -362,6 +359,29 @@
         map.on('style.load', () => {
             map.setFog({}); // Set the default atmosphere style
         });
+    </script>
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.11.0/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.11.0/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+            apiKey: "AIzaSyA94OnM2HP43pcWwRDs-YetMU5mKKeIKbk",
+            authDomain: "starclinc.firebaseapp.com",
+            projectId: "starclinc",
+            storageBucket: "starclinc.appspot.com",
+            messagingSenderId: "889076597511",
+            appId: "1:889076597511:web:c35971ce8cb5f4576ffba2",
+            measurementId: "G-BPGCETSEV2"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
     </script>
 </body>
 </html>
