worked on password recovery and built other frontend stuffs

--- a/starFrontend/src/public/Info.html
+++ b/starFrontend/src/public/Info.html
@@ -13,7 +13,7 @@
              <div class="bg-white flex items-center shadow-lg p-4 cursor-pointer ">
                 <!--BOOKED APPOINTMENT TITILE-->
                 <div class=" flex-1">
-                    <h4 class="p-2 cursor-pointer bg-blue-600 w-44 text-white rounded">Booked Appointment</h4>
+                    <h4 class="p-1 md:p-2 cursor-pointer bg-blue-600 w-32 md:w-44 text-white rounded">Booked Appointment</h4>
                 </div>
                 <!--Profile details-->
                 <div class="flex items-center border-l mx-9">
