worked on useremail authentication and fixed some errors

--- a/starFrontend/src/public/MainLogin.html
+++ b/starFrontend/src/public/MainLogin.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="flex h-screen ">
-        <div class="bg-blue-200 flex-1 flex-col min-h-screen justify-center items-center hidden md:flex">
+        <div class="bg-blue-200 flex-1  hidden md:flex">
             <img src="./img/Hospital room-rafiki.png" alt="" />
         </div>
         <!--second section of the page-->
@@ -44,10 +44,8 @@
                         <input type="password" placeholder="************"
                             class=" outline-none focus:border-indigo-500 L_password" />
                         <div class="flex passwordCheck">
-                                
                             <i class='bx bx-low-vision bx-sm  text-gray-400 cursor-pointer' ></i>
                             <!-- <i class='bx bx-show  bx-sm text-gray-400 eyeshow'></i>-->
-                           
                         </div>
                     </div>
                 </div>
