--- a/starFrontend/src/public/index.html
+++ b/starFrontend/src/public/index.html
@@ -44,9 +44,12 @@
                     LogOut
                 </div>
             </div>
-            <div class="md:hidden flex relative">
-                <div class="menu">
-                    <i class='bx bx-menu bx-md text-gray-400' onclick="myShow()"></i>
+            <div class="md:hidden menu flex relative">
+                <div class="showMenu ">
+                    <i class='bx bx-menu bx-md text-gray-400 '></i>
+                </div>
+                <div class="closeMenu hidden">
+                    <i class='bx bx-x bx-md text-gray-400'></i>
                 </div>
                 <!--Drop Down-->
                 <div
