--- a/starFrontend/src/public/AccountRecovery.html
+++ b/starFrontend/src/public/AccountRecovery.html
@@ -16,46 +16,28 @@
     <link rel="icon" href="./img/starClinic.jpg" alt="" type="image/x-icon" />
 </head>
 <body>
-    <div class="flex">
-        <div class="flex-1 bg-blue-200 h-screen m-auto hidden md:flex">
-            <img src="./img/Hospital room-rafiki.png" alt=""/>
-        </div>
-        <!--Email page-->
-        <div class="flex flex-1 flex-col min-h-screen justify-center items-center">
-            <div class="hidden p-1 mt-7  text-sm text-red-700 bg-red-100 rounded" role="alert">
-                <svg aria-hidden="true" class="flex-shrink-0 inline w-5 h-5 mr-3" fill="currentColor" viewBox="0 0 20 20"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                        d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
-                        clip-rule="evenodd"></path>
-                </svg>
-                <span class="sr-only">Danger</span>
-                <div>
-                    <span class="font-medium">Please make sure the email is valid</span>
-                </div>
+    <div class="flex h-screen">
+            <div class="bg-blue-200 flex-1  hidden md:flex">
+                <img src="./img/Hospital room-rafiki.png" alt="" />
             </div>
-            <div class="space-y-5">
-                <div class="flex justify-center">
-                    <img src="./img/starClinic.jpg" class="w-40" alt="tailus logo">
-                </div>
-                <div class="text-center">
-                    <h4 class="mb-5 font-bold text-lg">Account Recovery</h4>
-                    <p>Please Provide the email you used during registration</p>
-                </div>
-                <div class="">
-                    <label class="">Email</label>
-                    <div class="flex  items-center rounded border-2 border-gray-200 py-2 px-2">
-                        <i class='bx bx-envelope bx-sm  text-gray-400 cursor-pointer'></i>
-                        <input type="text" placeholder="iantubers@example.com"
-                            class="ml-1 outline-none focus:border-indigo-500  Checkemail" />
+            <div class=" flex flex-1 flex-col min-h-screen justify-center items-center ">
+                    <div class="justify-center flex flex-col items-center">
+                        <img src="./img/starClinic.jpg" class="w-40" alt="tailus logo">
+                        <p class="font-medium text-lg text-sky-600">AccountRecovery</p>
                     </div>
-                </div>
-                <div class="mt-6 relative">
-                    <button class="bg-blue-500 text-white px-5 rounded py-1 absolute right-0 nextbutton">Next</button>
-                </div>
+                    <div class=" p-2 ">
+                        <div class=" mt-2 flex  items-center rounded border-2 border-gray-200 py-2 px-3">
+                            <input type="text" placeholder="Email" class="outline-none Checkemail" />
+                            <i class='bx bx-envelope bx-sm  text-gray-400 cursor-pointer ml-2'></i>
+                        </div>
+                        <div class="">
+                            <button type="button"
+                                class="w-full mt-2 rounded mr-2 py-1 bg-blue-600 text-white px-4 nextbutton">Next</button>
+                        </div>
+                    </div>
+                <p class="message text-blue-700"></p>
             </div>
-          
-        </div>
+       
     </div>
     <script src="./AccountRecovery.js"></script>
     <!--AXIOS CDN-->
