remove the backend server

--- a/starFrontend/src/public/Info.html
+++ b/starFrontend/src/public/Info.html
@@ -56,6 +56,9 @@
                                         Date
                                     </th>
                                     <th scope="col" class="py-3 px-6">
+                                        Time
+                                    </th>
+                                    <th scope="col" class="py-3 px-6">
                                         Service
                                     </th>
                                     <th scope="col" class="py-3 px-6">
