--- a/starFrontend/src/public/MainLogin.html
+++ b/starFrontend/src/public/MainLogin.html
@@ -19,8 +19,8 @@
             <img src="./img/Hospital room-rafiki.png" alt="" />
         </div>
         <!--second section of the page-->
-        <div class=" flex flex-1 flex-col min-h-screen justify-center items-center " x-data="app">
-            <div class="justify-center flex flex-col items-center">
+        <div class=" flex flex-1 flex-col items-center " x-data="app">
+            <div class="">
                 <img src="./img/starClinic.jpg" class="w-40" alt="tailus logo">
                 <p class="font-medium text-lg text-sky-600">Welcome to StarClinic</p>
             </div>
@@ -161,39 +161,39 @@
                         <p class="text-gray-300 cursor-pointer">Already having an account?<span @click="isLoginPage =false"
                                 x-show="isLoginPage" class="ml-5 text-blue-700 font-bold cursor-pointer">Login</span></p>
                     </div>
-                    <!--success alert-->
-                    <div class="success hidden p-4 mb-4 mt-4 text-sm text-green-700 bg-green-100 rounded-lg dark:bg-green-200 dark:text-green-800"
-                        role="alert">
-                        <svg aria-hidden="true" class="flex-shrink-0 inline w-5 h-5 mr-3" fill="currentColor" viewBox="0 0 20 20"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd"
-                                d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
-                                clip-rule="evenodd"></path>
-                        </svg>
-                        <span class="sr-only">Info</span>
-                        <div>
-                            <span class="font-medium message">Success alert!</span> You account has been created successfully
-                        </div>
+                </div>
+                <!--success alert-->
+                <div class="success hidden  p-2   m-4 text-sm text-green-700 bg-green-100 rounded-lg "
+                    role="alert">
+                    <svg aria-hidden="true" class="flex-shrink-0 inline w-5 h-5 mr-3" fill="currentColor" viewBox="0 0 20 20"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                            d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
+                            clip-rule="evenodd"></path>
+                    </svg>
+                    <span class="sr-only">Info</span>
+                    <div>
+                        <span class="font-medium message">Success alert!</span> You account has been created successfully
                     </div>
+                </div>
                     <!--warning alert-->
-                    <div class="hidden signwarn p-4 mt-5 mb-4 text-sm text-red-700 bg-red-100 rounded-lg dark:bg-red-200 dark:text-red-800" role="alert">
-                        <svg aria-hidden="true" class="flex-shrink-0 inline w-5 h-5 mr-3" fill="currentColor" viewBox="0 0 20 20"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd"
-                                d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
-                                clip-rule="evenodd"></path>
-                        </svg>
-                        <span class="sr-only">Danger</span>
-                        <div>
-                            <span class="font-medium">Ensure that these requirements are met:</span>
-                            <ul class="mt-1.5 ml-4 text-red-700 list-disc list-inside">
-                                <li>All fields must not empty</li>
-                                <li>your password should have at least 8 characters</li>
-                                <li>You have a stable network connection</li>
-                            </ul>
-                        </div>
+                <div class=" signwarn p-2 hidden m-4 text-sm text-red-700 bg-red-100 rounded-lg"
+                    role="alert">
+                    <svg aria-hidden="true" class="flex-shrink-0 inline w-5 h-5 mr-3" fill="currentColor" viewBox="0 0 20 20"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                            d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
+                            clip-rule="evenodd"></path>
+                    </svg>
+                    <span class="sr-only">Danger</span>
+                    <div>
+                        <span class="font-medium">Ensure that these requirements are met:</span>
+                        <ul class="mt-1.5 ml-4 text-red-700 list-disc list-inside">
+                            <li>All fields must not empty</li>
+                            <li>your password should have at least 8 characters</li>
+                            <li>You have a stable network connection</li>
+                        </ul>
                     </div>
-                    
                 </div>
         </div>
 
